[Solver] pretty